--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -8,7 +8,10 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h4 class="modal-title">Установите максимальные баллы срезов!</h4>
+				<h4 class="modal-title">Установите максимальные баллы!</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
 			</div>
 			<div class="modal-body">
                 <div class="alert alert-danger" role="alert" id="modal_error"></div>
