Replace Zvanie model with enum

--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -21,11 +21,7 @@
                 <td> </td>
                 <td>  <a href="{% url 'teachers:edit_teacher' teacher.id %}">{{ teacher.FIO }} </a> </td>
                 <td> {{ teacher.Position }} </td>
-                <td>
-                    {% if teacher.Zvanie %}
-                        {{  teacher.Zvanie }}
-                    {% endif %}
-                </td>
+                <td>{{ teacher.get_Zvanie_display }}</td>
                 <td> {{ teacher.cathedra }} </td>
                 <td> <a href="{% url 'disciplines:disciplines' teacher.id %}"><input type="submit" value="Дисциплины"
                                                                                    class="btn btn-primary"></a></td>
