--- a/templates/disciplines_detail.html
+++ b/templates/disciplines_detail.html
@@ -23,7 +23,7 @@
                         <tbody>
                         {% for s in form %}
                             <tr>
-                                <td> {{ s.semestr }} </td>
+                                <td> {{ s.semester }} </td>
                                 <td> {{ s.Credit }} </td>
                                 <td> {{ s.Lecture }} </td>
                                 <td> {{ s.Practice }} </td>
