--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
             <div class="col"><h2>{{ discipline.group.Name }}</h2></div>
-            <div class="col"><h2>Семестр: {{ discipline.discipline_detail.semestr }}</h2></div>
+            <div class="col"><h2>Семестр: {{ discipline.discipline_detail.semester }}</h2></div>
         </div>
         <div class="row">
             <div class="col"><h2>Преподаватель: {{ discipline.lecturer.FIO }} </h2></div>
