--- a/templates/disc_details.html
+++ b/templates/disc_details.html
@@ -27,7 +27,7 @@
                 <td> {{ d.Lab }} </td>
                 <td> {{ d.KSR }} </td>
                 <td> {{ d.SRS }} </td>
-                <td> {{ d.semestr }} </td>
+                <td> {{ d.semester }} </td>
                 <td> <a href="{% url 'disciplines:update_details' d.id %}"><input type="submit" value="Изменить"
                                                                                    class="btn btn-secondary"></a></td>
             </tr>
