--- a/templates/select_teacher.html
+++ b/templates/select_teacher.html
@@ -33,6 +33,6 @@
     </table>
     <br>
     <p align="center"><button type="submit" class="btn btn-success">Сохранить</button>
-    <a href= "{% url 'nomenclatures:select_semestr' %}" class="btn btn-primary">Отмена</a></p>
+    <a href= "{% url 'nomenclatures:select_semester' %}" class="btn btn-primary">Отмена</a></p>
 </form>
 {% endblock %}
