--- a/templates/student_form.html
+++ b/templates/student_form.html
@@ -24,7 +24,7 @@
                         </div>
                     {% endfor %}
                     <p align="center"><button type="submit" class="btn btn-success">Сохранить</button>
-                    <a href= "{% url 'student_changelist' %}" class="btn btn-primary">Отмена</a></p>
+                    <a href= "{% url 'students:student_changelist' %}" class="btn btn-primary">Отмена</a></p>
                 </div>
             </div>
         </form>
