--- a/templates/eduprog_list.html
+++ b/templates/eduprog_list.html
@@ -1,25 +1,18 @@
 {% extends 'base.html' %}
 {% load extra_tags %}
 {% block title %}Список студентов{% endblock %}
-{% block content %}
-<div class="modal" id="AddGroups" tabindex="-1" role="dialog">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title">Выберете группы!</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-			</div>
-			<div class="modal-body">
+{% block additional_css %}
+{{ form.media.css }}
+<style type="text/css">
+    select{
+        width: 300px;
+    }
+</style>
+{% endblock %}
 
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" id="SetGroups">Сохранить</button>
-			</div>
-		</div>
-	</div>
-</div>
+{% block content %}
+<div class="alert alert-danger" role="alert" id="error" style="visibility:hidden;position:fixed;top:0;left:0;width:100%;z-index:100;"></div>
+{% include 'select_groups_modal.html' %}
 
 <h1>Список рабочих учебных планов</h1>
 <div class="container">
@@ -43,8 +36,8 @@
                     <td>{{ prog.profile.name }}</td>
                     <td>{{ prog.year }}</td>
                     <td></td>
-                    <td>{{ groups|get_list:prog }}</td>
-                    <td><button class="btn btn-primary" id="add_groups">Добавить группу</button></td>
+                    <td id="groups_{{ prog.id }}">{{ groups|get_list:prog }}</td>
+                    <td><button class="btn btn-primary" name="add_groups" id="{{ prog.id }}">Добавить группу</button></td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -59,8 +52,19 @@
 </div>
 {% endblock %}
 
+{% block additional_js %} {{ form.media.js }} {% endblock %}
+
 {% block scripts %}
+function ShowError(msg, type){
+    var error =(type == 1)?$('#error'): $('#modal_error');
+    error.html(msg);
+	error.show();
+	error.delay(3000).slideUp(500, function() {$(this).hide();});
+}
 $(document).ready(function(){
+    $('#error').hide();
+    $('#error').css('visibility','visible');
+    $('#modal_error').hide();
     var t = $('#eduprog_list').DataTable({
         "columnDefs": [
             {
@@ -83,9 +87,50 @@ $(document).ready(function(){
             cell.innerHTML = i+1;
         } );
     } ).draw();
-});
-$('#add_groups').on('click', function(e){
-    e.preventDefault();
-    $('#AddGroups').modal('show');
+    $('[name="add_groups"]').on('click', function(e, object){
+        e.preventDefault();
+        $.ajax({
+            url: "{% url 'nomenclatures:api:get_groups_by_eduprog' %}",
+            method: "GET",
+            data: {"program": $(this).attr('id')},
+            dataType: "json"
+        }).done(function(data){
+            if(data.length > 0){
+                keys = ['Name', 'id'];
+                $('#id_edu_program').attr('value', data[0]['program']);
+                $('#id_groups').val(null).trigger('change');
+                $('#id_groups').find('option').remove();
+                $.each(data, function(index, value){
+                    if (keys.every(key => Object.keys(value).includes(key)))
+                        $('#id_groups').append(new Option(value['Name'], value['id'], true, true)).trigger('change');
+                });
+                $('#AddGroups').modal('show');
+            }else{
+                //show error
+                ShowError("Ошибка получения информации о группах!!", 1);
+            }
+        }).fail(function(jqXHR, textStatus){
+            ShowError("Ошибка связи с сервером!!", 1);
+        });
+    });
+
+    $('#SetGroups').on('click', function(e){
+        e.preventDefault();
+        $.ajax({
+            url: $('#set_rup').attr('action'),
+            method: $('#set_rup').attr('method'),
+            data: $('#set_rup').serialize()
+        }).done(function (data){
+            if(data['result'] == true){
+                //add groups to table
+                $("[id=groups_" + data['program'] + "]").html(data['group_list']);
+                $('#AddGroups').modal('hide');
+            }else{
+                ShowError("Ошибка сохранения групп!!", 0);
+            }
+        }).fail(function(jqXHR, textStatus){
+            ShowError("Ошибка связи с сервером!!", 0);
+        });
+    });
 });
 {% endblock %}
