some disciplines do not have code in xml file

--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
                         <p align="left"><label class="error">{{ login_error }}</label></p>
                     {% endif %}
                     <p align="left"><button type="submit" class="btn btn-success">Войти</button>
-                    <a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a></p>
+                    <!--a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a--></p>
                 </div>
             </div>
         </form>
