--- a/static/css/my.css
+++ b/static/css/my.css
@@ -3,3 +3,8 @@ H1 { text-align: center; }
 .backgrid-container {
     height: auto;
 }
+.rotate{
+    writing-mode: vertical-lr;
+    width: 75px;
+    text-align: 'center';
+}
