--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                           <a class="dropdown-item" href="{% url 'students:student_changelist' %}">Список студентов</a>
                           {% endif %}
                           <a class="dropdown-item" href="{% url 'disciplines:disciplines_list' %}">Список дисциплин</a>
-                          <a class="dropdown-item" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
+                          <a class="dropdown-item" href="{% url 'students:group_points' %}">Экран успеваемости</a>
                           <div class="dropdown-divider"></div>
                             {% if user|has_group:"zavkaf" %}
                           <a class="dropdown-item" href="{% url 'nomenclatures:rup' %}">Рабочий учебный план</a>
