Revert "Fixed vertical headers of backgrid. Now they are properly displayed on Chrome."
This reverts commit 8af4c1d567d0e792c082bbdcaa811ef4b591c42c.

--- a/static/css/my.css
+++ b/static/css/my.css
@@ -3,8 +3,11 @@ H1 { text-align: center; }
 .backgrid-container {
     height: auto;
 }
-.rotate{
+th>a.rotate{
     writing-mode: vertical-lr;
+    text-orientation: sideways;
+}
+th.rotate{
     width: 75px;
-    text-align: 'center';
+    text-align: center;
 }
