Added info message on students_score.html

--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -33,6 +33,11 @@
 	</div>
 </div>
     <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-info" role="alert">Согласно п. 4.8 положения СВФУ о БРС Текущий, рубежный и промежуточный контроль осуществляется в рамках <b>накопительной</b> балльно-рейтинговой системы</div>
+            </div>
+        </div>
         {% if not maxpoints %}
         <div class="row">
             <div class="col">
