--- a/awards/templates/awards/awards_list.html
+++ b/awards/templates/awards/awards_list.html
@@ -8,6 +8,7 @@
                 <th>№</th>
                 <th>наименование награды</th>
                 <th>тип награды</th>
+                <th>Уровень награды</th>
                 <th>организация</th>
                 <th></th>
             </tr>
@@ -18,6 +19,7 @@
             <td>{{ forloop.counter }}</td>
             <td><a href="{% url 'awards:edit_award' award.id %}">{{ award.award_name }}</a></td>
             <td>{{ award.award_type }}</td>
+            <td>{{ award.award_level }}</td>
             <td>{{ award.issuer }}</td>
             <td>
                 <a href="{% url 'awards:delete_award' award.id %}" class="btn btn-danger" role="button">
