--- a/awards/templates/awards/awards_edit.html
+++ b/awards/templates/awards/awards_edit.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 {% block title %}Редактирование награды{% endblock %}
+
+{% block additional_css %}
+{{ form.media.css }}
+{% endblock %}
+
 {% block content %}
     <div class="container">
         <form action="" method="post">
@@ -22,3 +27,5 @@
         </form>
     </div>
 {% endblock %}
+
+{% block additional_js %} {{ form.media.js }} {% endblock %}
