--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,6 @@
                           {% endif %}
                           {% if user|has_group:"office" or user|has_group:"zavkaf" %}
                           <a class="dropdown-item" href="{% url 'teachers:list_teachers' %}">Список преподавателей</a>
-                          <a class="dropdown-item" href="{% url 'awards:list_employee_awards' %}">Список наград сотрудников</a>
-                              <a class="dropdown-item" href="{% url 'awards:list_issuers' %}">Список организаций</a>
                           {% if user|has_group:"zavkaf" %}
                           <a class="dropdown-item" href="{% url 'students:student_list' %}">Список студентов</a>
                           {% else %}
@@ -48,6 +46,12 @@
                             {% endif %}
                           <a class="dropdown-item" href="{% url 'nomenclatures:nomenclature_disciplines' %}">Номенклатура дисциплин</a>
                           {% endif %}
+                          <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'awards:list_employee_awards' %}">Список наград сотрудников</a>
+                            {% if user|has_group:"profcom" %}
+                            <a class="dropdown-item" href="{% url 'awards:list_awards' %}">Список наград</a>
+                            <a class="dropdown-item" href="{% url 'awards:list_issuers' %}">Список организаций</a>
+                            {% endif %}
                         </div>
                     </li>
                 </ul>
